# ChangeLog for kde-base/kdebase-meta
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-meta/ChangeLog,v 1.101 2008/05/18 22:24:51 maekke Exp $

  18 May 2008; Markus Meier <maekke@gentoo.org> kdebase-meta-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

*kdebase-meta-4.0.4 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +kdebase-meta-4.0.4.ebuild:
  Added KDE 4.0.4 version of kdebase-meta. Thanks to Jorge Manuel B. S.
  Vicetto.

  15 May 2008; Markus Rothe <corsair@gentoo.org> kdebase-meta-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  13 May 2008; Jeroen Roovers <jer@gentoo.org> kdebase-meta-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> kdebase-meta-3.5.9.ebuild:
  Marking kdebase-meta-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> kdebase-meta-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

*kdebase-meta-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdebase-meta-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -kdebase-meta-4.0.1.ebuild:
  Old.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -kdebase-meta-4.0.1.ebuild:
  Old.

*kdebase-meta-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdebase-meta-4.0.2.ebuild:
  Version bump to KDE 4.0.2

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> kdebase-meta-3.5.8.ebuild,
  kdebase-meta-3.5.9.ebuild, kdebase-meta-4.0.1.ebuild:
  Keyword split KDE for HPPA.

  23 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  kdebase-meta-4.0.1.ebuild:
  Remove traces of monolithic KDE 4.

*kdebase-meta-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdebase-meta-3.5.9.ebuild:
  Version bump to KDE 3.5.9.
