@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdebase-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-meta/ChangeLog,v 1.101 2008/05/18 22:24:51 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-meta/ChangeLog,v 1.102 2008/06/05 21:28:35 keytoaster Exp $
+
+*kdebase-meta-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdebase-meta-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdebase-meta.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdebase-meta-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
